Name:                network-fancy
Version:             0.1
Synopsis:            Tidier network package.
Description:         Tidier network package.
License:             BSD3
License-file:        COPYING
Copyright:           Taru Karttunen <taruti@taruti.net>
Author:              Taru Karttunen
Category:            Network
Maintainer:          taruti@taruti.net
Cabal-Version:       >= 1.2
Build-Type:          Simple

Executable network-fancy-test
    Main-Is:             test.hs
    Other-Modules:       Network.Fancy
    GHC-Options:         -threaded
    C-Sources:           cbits.c
    Includes:            network-fancy.h
    Include-dirs:        .
    Build-depends:	 base == 4.*, bytestring, random, directory
    Extensions:          TypeSynonymInstances, ForeignFunctionInterface, CPP, DeriveDataTypeable
    if os(windows) {
      CPP-Options:       -DWINDOWS=WINDOWS -DCALLCONV=stdcall -DSAFE_ON_WIN=safe
      CC-Options:        -DWINDOWS=WINDOWS -DCALLCONV=stdcall -DSAFE_ON_WIN=safe
      Extra-Libraries:   ws2_32
    } else {
      if os(solaris) {
        Extra-Libraries: socket
      }
      CPP-Options:       -DCALLCONV=ccall -DSAFE_ON_WIN=unsafe
      CC-Options:        -DCALLCONV=ccall -DSAFE_ON_WIN=unsafe
    }

Library
    Build-Depends:       base == 4.*, bytestring
    Exposed-modules:     Network.Fancy
    C-Sources:           cbits.c
    Includes:            network-fancy.h
    Include-dirs:        .
    GHC-Options:         -Wall
    Extensions:          TypeSynonymInstances, ForeignFunctionInterface, CPP, DeriveDataTypeable
    if os(windows) {
      CPP-Options:       -DWINDOWS=WINDOWS -DCALLCONV=stdcall -DSAFE_ON_WIN=safe
      CC-Options:        -DWINDOWS=WINDOWS -DCALLCONV=stdcall -DSAFE_ON_WIN=safe
      Extra-Libraries:   ws2_32
    } else {
      if os(solaris) {
        Extra-Libraries: socket
      }
      CPP-Options:       -DCALLCONV=ccall -DSAFE_ON_WIN=unsafe
      CC-Options:        -DCALLCONV=ccall -DSAFE_ON_WIN=unsafe
    }
